# hookmeup

./: .gitignore  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  Makefile  Pipfile  README.md  appveyor.yml  make.bat  pyproject.toml  pytest.ini  tox.ini
hookmeup/: __init__.py  hookmeup.py
tests/: __init__.py  pylintrc  test_hookmeup.py  test_main.py
