[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hookmeup"
author = "Daniel Moch"
author-email = "daniel@danielmoch.com"
home-page = "https://github.com/djmoch/hookmeup"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git"]

[tool.flit.metadata.requires-extra]
dev = ['pipenv']

[tool.flit.scripts]
hookmeup = "hookmeup:main"
